# ckanext-danubius-theme

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
ckanext/danubius_theme/: helpers.py  plugin.py  views.py
ckanext/danubius_theme/assets/: webassets.yml
ckanext/danubius_theme/assets/css/: danubius-theme.css
ckanext/danubius_theme/templates/: base.html  footer.html  header.html
ckanext/danubius_theme/templates/home/snippets/: promoted.html
ckanext/danubius_theme/templates/package/: search.html
ckanext/danubius_theme/tests/: test_helpers.py  test_plugin.py  test_views.py
