[project]
name = "ckanext-danubius-theme"
version = "0.0.1"
description = "Custom theme for the CKAN instance of the DANUBIUS consortium"
readme = "README.md"
authors = [
    {name = "Gabriel Majeri", email = "gabriel.majeri@unibuc.ro"},
    {name = "Gabriel Pană"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "DANUBIUS", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/UniBuc-DTD/ckanext-danubius-theme"

[project.entry-points."ckan.plugins"]
danubius-theme = "ckanext.danubius_theme.plugin:DanubiusThemePlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
